_assets/sass/objects/grid.scss
/* ===========================================================

	# Generic grid

=========================================================== */

@include respond-max( $mq-small ) {

	.o-grid__item + .o-grid__item {
		margin-top: $line-height;
	}

}

@include respond-min( $mq-small ) {

	.o-grid--two {

		.o-grid__item {
			@include column( 1/2, $cycle: 2, $gutter: 5 );
			margin-bottom: $line-height * 2;
		}

	}

	.o-grid--three {

		.o-grid__item {
			@include column( 1/3, $cycle: 3 );
			margin-bottom: $line-height * 2;
		}

	}

	.flexwrap {

		.o-grid--two,
		.o-grid--three {
			display: flex;
			flex-wrap: wrap;
		}

		.o-grid__item {
			display: flex;
		}

	}

}

